# autoindex-rs

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  servicemenu.desktop  servicemenu.sh
files/: .gitignore
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  app.d.ts  main.ts  style.css  utils.ts
frontend/src/atoms/: Breadcrumbs.vue  FileItem.vue  FileItemParent.vue  FileList.vue  LoadingSpinner.vue
frontend/src/composables/: useFileSize.ts  useViewMode.ts
src/: host_extractor.rs  main.rs
src/endpoints/: chroot.rs  config.rs  events.rs  index.rs  main.rs  mod.rs  thumbnail.rs
src/state/: config.rs  events.rs  mod.rs  thumbnails.rs
