[package]
name = "autoindex-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "http2"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs", "signal"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
mime_guess = "2.0.5"
fast_image_resize = "6.0.0"
image = "0.25.6"
fchashmap = "0.1.3"
tower-http = { version = "0.7.0", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "trace"] }
tokio-util = { version = "0.7.18", features = ["io"] }
include_dir = "0.7.4"
reqwest = { version = "0.13.4", features = ["stream"] }
serde_json = "1.0.150"
webpx = "0.4.0"
futures-util = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
